<resources>
    <string name="app_name">เบาหวาน</string>

    <string name="section1">ประเมินความเสี่ยง</string>
    <string name="section1icon">ประเมินความเสี่ยง</string>
    <string name="section2">หลักปฎิบัติ</string>
    <string name="section3">โภชนาการ</string>
    <string name="section4">แนะนำแพทย์</string>
    <string name="section5">ยารักษาเบาหวาน</string>
    <string name="section6">บันทึกสุขภาพ</string>

    <string name="section1_1">ประเมินความเสี่ยงเพื่อป้องกันโรค</string>
    <string name="section1_2">ประเมินความเสี่ยงในช่วงเวลานั้น</string>

    <string name="age">ช่วงอายุ</string>
    <string name="sex">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="height">ความสูง</string>
    <string name="inch">นิ้ว</string>
    <string name="weight">น้ำหนัก</string>
    <string name="kilo">กิโลกรัม</string>
    <string name="width">เส้นรอบเอว</string>
    <string name="centi">เซนติเมตร</string>
    <string name="presser">ความดันโลหิต</string>
    <string name="DM">โรคเบาหวานในญาติสายตรง\n(พ่อ แม่ พี่ หรือน้อง)</string>
    <string name="have">มี</string>
    <string name="nohave">ไม่มี</string>

    <string name="risk">ความเสี่ยง</string>
    <string name="intro">คำแนะนำ</string>

    <string name="age1">อายุ</string>
    <string name="year">ปี</string>

    <string name="perform1">การออกกำลังกาย</string>
    <string name="perform2">การตรวจระดับน้ำตาลในเลือดด้วยตนเอง (SMBG)</string>
    <string name="perform3">การตรวจปัสสาวะด้วยตนเอง</string>
    <string name="perform4">การดูแลช่องปาก</string>
    <string name="perform5">การดูแลผิวหนัง</string>
    <string name="perform6">การดูแลเท้า</string>
    <string name="perform7">เบาหวานขณะตั้งครรภ์</string>
    <string name="perform8">ภาวะฉุกเฉินในผู้ป่วยเบาหวาน</string>
    <string name="perform9">โรคแทรกซ้อนที่เกิดจากเบาหวาน</string>

    <string name="exercise1">แนวทางการออกกำลังกาย</string>
    <string name="exercise2">หลักการออกกำลังกาย</string>
    <string name="exercise3">ขั้นตอนการออกกำลังกาย</string>

    <string name="smbg1">ความถี่ของการทำ SMBG</string>
    <string name="smbg2">เทคนิคการตรวจ</string>

    <string name="urinalysis1">ความถี่การตรวจปัสสาวะ</string>
    <string name="urinalysis2">ขั้นตอนการตรวจปัสสาวะ</string>
    <string name="urinalysis3">ข้อแนะนำการตรวจปัสสาวะด้วยแถบ</string>
    <string name="urinalysis4">การตรวจหาสารคีโตนในปัสสาวะ</string>

    <string name="foot1">การตรวจดูเท้าด้วยตนเอง</string>
    <string name="foot2">การบริหารเท้า</string>
    <string name="foot3">วิธีป้องกันโรคแทรกซ้อนที่เท้า</string>
    <string name="foot4">วิธีเลือกรองเท้า</string>

    <string name="pregnant1">ความเสี่ยงเบาหวานขณะตั้งครรภ์</string>
    <string name="pregnant2">โรคแทรกซ้อน</string>
    <string name="pregnant3">หลักปฏิบัติเบาหวานขณะตั้งครรภ์</string>

    <string name="emergency1">ภาวะคีโตซีส</string>
    <string name="emergency2">ภาวะโคม่าจากน้ำตาลในเลือดสูง</string>
    <string name="emergency3">ภาวะน้ำตาลในเลือดต่ำ</string>

    <string name="complication1">โรคความดันโลหิตสูง</string>
    <string name="complication2">โรคไขมันในเลือดสูง</string>
    <string name="complication3">โรคหลอดเลือดแข็ง</string>
    <string name="complication4">โรคตา</string>
    <string name="complication5">โรคไต</string>
    <string name="complication6">โรคปลายประสาทอักเสบ</string>

    <string name="oral">หลักปฏิบัติการดูแลช่องปาก</string>

    <string name="ketosis1">อาการ</string>
    <string name="ketosis2">การรักษา</string>
    <string name="ketosis3">การป้องกัน</string>
    <string name="sugarlow1">ปัจจัยเสี่ยงต่อภาวะน้ำตาลในเลือดต่ำ</string>
    <string name="sugarlow2">ภาวะน้ำตาลในเลือดต่ำไม่รุนแรง\nและปานกลาง</string>
    <string name="sugarlow3">ภาวะน้ำตาลในเลือดต่ำชนิดรุนแรง</string>

    <string name="nutrition1">เมนูอาหาร</string>
    <string name="nutrition2">สูตรอาหาร</string>

    <string name="menufood1">เมนูวันที่ 1</string>
    <string name="menufood2">เมนูวันที่ 2</string>
    <string name="menufood3">เมนูวันที่ 3</string>
    <string name="menufood4">เมนูวันที่ 4</string>
    <string name="menufood5">เมนูวันที่ 5</string>


    <string name="foodrecipe1">แกงจืดผักกาดขาวเต้าหู้หมูสับ</string>
    <string name="foodrecipe2">ผัดมะระขี้นกใส่ไข่</string>
    <string name="foodrecipe3">ราดหน้าไก่ผักสามสี</string>
    <string name="foodrecipe4">แกงใบย่านางสารพัดเห็ด</string>
    <string name="foodrecipe5">แกงจืดฟักเขียวหมูสับ</string>
    <string name="foodrecipe6">ผัดน้ำเต้ากับเห็ดหอม</string>
    <string name="foodrecipe7">ข้าวกล้องราดกะเพราไก่สมุนไพร</string>
    <string name="foodrecipe8">แกงจืดสามสหาย</string>
    <string name="foodrecipe9">ยำปลาทู</string>
    <string name="foodrecipe10">ผัดผักเบญจรงค์</string>
    <string name="foodrecipe11">ไข่ตุ๋นสามสี</string>
    <string name="foodrecipe12">เซี่ยงไฮ้ผัดฮ่องเต้</string>
    <string name="foodrecipe13">แกงจืดเต้าหู้สอดไส้เห็ดหอม</string>
    <string name="foodrecipe14">น้ำพริกปลานิล</string>
    <string name="foodrecipe15">ผัดยอดตำลึง</string>
    <string name="foodrecipe16">ยำไข่ต้มใส่ถั่วแดง</string>
    <string name="foodrecipe17">แกงกุ้งใส่หัวปลี ชะอม ใบชะพลู</string>
    <string name="foodrecipe18">ยำมะระไก่ฉีก</string>
    <string name="foodrecipe19">แกงหมูเทโพนมพร่องมันเนย</string>
    <string name="foodrecipe20">ลาบปลาทับทิม</string>
    <string name="foodrecipe21">ผัดบวบใส่ไข่</string>
    <string name="foodrecipe22">เกาเหลาหมู</string>
    <string name="foodrecipe23">ก๋วยเตี๋ยวลุยสวน</string>
    <string name="foodrecipe24">ยำมะเขือยาว</string>
    <string name="foodrecipe25">แกงเลียงสมุนไพร</string>

    <string name="showdoctor">แสดงข้อมูลแพทย์</string>
    <string name="adddoctor">เพิ่มข้อมูลแพทย์</string>
    <string name="editdoctor">แก้ไขข้อมูลแพทย์</string>

    <string name="drug1">ยาแผนปัจจุบัน</string>
    <string name="drug2">ยาสมุนไพร</string>

    <string name="drug11">Glipizide</string>
    <string name="drug12">Glibenclamide</string>
    <string name="drug13">Repaglinide</string>
    <string name="drug14">Metformin</string>
    <string name="drug15">Pioglitazone</string>
    <string name="drug16">Acarbose</string>
    <string name="drug17">Voglibose</string>
    <string name="drug18">Insulin</string>

    <string name="herb">มะระขี้นก</string>
    <string name="herb2">ครอบฟันสี</string>
    <string name="herb3">ลูกใต้ใบ</string>
    <string name="herb4">กรดน้ำ</string>
    <string name="herb5">อบเชย</string>
    <string name="herb6">ไมยราบ</string>
    <string name="herb7">เตย</string>
    <string name="herb8">ผักเชียงดา</string>
    <string name="herb9">ตำลึง</string>
    <string name="herb10">ชะพลู</string>
    <string name="herb11">หว้า</string>

    <string name="showhealth">แสดงบันทึกสุขภาพ</string>
    <string name="addhealth">เพิ่มบันทึกสุขภาพ</string>
    <string name="edithealth">แก้ไขบันทึกสุขภาพ</string>

</resources>
