<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="appbsru.supergolf.healthrecord.Section3Hold1Activity"
    android:background="@drawable/bg500">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nutrition1ScrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView22"
                    android:background="@drawable/bnrfood2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nutrition1"
                    android:id="@+id/fd1TextView"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menufood1"
                    android:id="@+id/fd11Button"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menufood2"
                    android:id="@+id/fd12Button"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menufood3"
                    android:id="@+id/fd13Button"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menufood4"
                    android:id="@+id/fd14Button"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h4" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menufood5"
                    android:id="@+id/fd15Button"
                    android:textColor="@color/text"
                    android:textSize="@dimen/h4" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
