<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appbsru.supergolf.healthrecord.Section2Sup82Activity"
    android:background="@drawable/bg500">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pactice82ImageView"
                android:background="@drawable/bnpractice" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perform8"
                android:id="@+id/sup82TextView"
                android:textColor="@color/text"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency2"
                android:id="@+id/sup82kTextView"
                android:textColor="@color/text"
                android:textSize="@dimen/h4"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ketosis1"
                android:id="@+id/kts21Button"
                android:textColor="@color/text"
                android:textSize="@dimen/h4" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ketosis3"
                android:id="@+id/kts22Button"
                android:textColor="@color/text"
                android:textSize="@dimen/h4" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
